# omni-npu

./: .gitignore  README.md  TEST_SUMMARY.md  pyproject.toml  pytest.ini  run_tests.sh
examples/: serve-pd-disaggregate.sh  serve-single-instance.sh
examples/models/: deepseek.sh  qwen.sh
src/omni_npu/: __init__.py  logger.py  platform.py  vllm_plugin.py
src/omni_npu.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/omni_npu/attention/: ops.py
src/omni_npu/compilation/: __init__.py  acl_graph.py  decorators.py  ge_compile_config.py  ge_wrapper.py  npugraph_ex.py
src/omni_npu/connector/: __init__.py  llmdatadist_connector_v1.py  llmdatadist_manager_v1.py  omni_cache_connector_v1.py  register.py  utils.py
src/omni_npu/distributed/: __init__.py  communicator.py  eplb_state.py
src/omni_npu/layers/: __init__.py  activation.py  npu_rms_norm.py
src/omni_npu/sample/: rejection_sampler.py  sampler.py
src/omni_npu/v1/: __init__.py  utils.py
src/omni_npu/vllm_patches/: README.md  __init__.py  core.py  patch_manager.py
src/omni_npu/worker/: README.md  __init__.py  npu_mem_pool.py  npu_model_runner.py  npu_worker.py
tests/: .coveragerc  QUICKSTART.md  README.md  STRUCTURE.md  TESTING.md  run_tests.sh
tests/integration/attention/: test_mla_chunked_prefill.py  test_npu_mla_math.py
tests/integration/distributed/: test_communicator.py
tests/integration/models/: test_loader.py  test_loader_integration.py
tests/integration/utils/: common_utils.py
tests/unit/: test_omni_class.py
tests/unit/attention/: test_npu_mla_wrapper.py
tests/unit/compilation/: test_acl_graph.py  test_decorators.py  test_ge_compile_config.py  test_npugraph_ex.py
tests/unit/config/: test_reasoning_config.py
tests/unit/connector/: test_llmdatadist_connector_v1.py  test_llmdatadist_manager_v1.py  test_register.py  test_remote_decode_lifecycle.patch  test_remote_prefill_lifecycle.patch  test_utils.py  utils.py
tests/unit/distributed/: test_comm_ops.patch  test_communicator.py  test_layer_parallel_extensions.py
tests/unit/fused_mlp/: test_fused_mlp.py
tests/unit/layers/: test_activation.py  test_npu_dsa.py  test_npu_rms_norm.py  test_prefetch.py  test_rotary_embedding.py  test_vocab_parallel_embedding.py
tests/unit/models/: test_deepseek_mtp.py  test_loader.py
tests/unit/parsers/: utils.py  (+2 more)
(+175 files in other folders)
