[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omni-npu"
version = "0.2.0"
description = "vLLM NPU platform plugin and worker/modelrunner integration"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Omni NPU", email = "kkrazy0630@gmail.com" }]
license = { text = "MIT" }
keywords = ["npu", "vllm", "plugin", "torch_npu"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
npu = [
  "torch-npu",
]
test = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://gitee.com/omniai/omninpu"

[project.entry-points."vllm.platform_plugins"]
omni-npu = "omni_npu.vllm_plugin:plugin"

[project.entry-points."vllm.general_plugins"]
omni_npu_patches = "omni_npu.vllm_patches:apply_patches"
omni_custom_models = "omni_npu.v1.models:register_models"
omni_models_v0 = "omni_npu.v0.models:register_model"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["omni_npu*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
